# nleroy917.github.io

./: .env  .gitignore  Makefile  README.md  next.config.js  package-lock.json  package.json
.github/workflows/: deploy.yml  nextjs.yml
components/blog/: post-card.tsx  post.tsx  progress.tsx
components/layout/: blog-layout.tsx  layout.tsx
components/layout/nav/: hamburger-menu.tsx  mobile-nav-item.tsx  nav-item.tsx  nav.tsx
components/music/: genre-tag.tsx  spotify-album-preview.tsx
components/publications/: publication.tsx
components/seo/: head.tsx
components/software/: software-entry.tsx  tag.tsx
content/: about.typ  index.typ
content/blog/: _index.typ  hello-typst.typ
data/: const.ts
data/cms/: blog-header.md  landing.md  publications-header.md  software-header.md
data/cms/blog/: ai.md  beautiful-sites.md  karen-cat-dot-com.md  posts.yaml  refactors.md  things-i-regret.md  uva-on-film.md
data/cms/hire/: atacformer.md  novacards.md  tldr.md
data/cms/interests/: books.md  books.yaml  music.md  music.yaml
data/cms/publications/: bibliography.bib  pubs.yaml
data/cms/software/: software.yaml
hooks/: useGitHubStars.ts  useOnClickOutside.ts
lib/: web.typ
pages/: _app.tsx  favorites.tsx  hire.tsx  hunt.tsx  index.tsx  music-and-books.tsx  software.tsx
pages/blog/: [id].tsx  index.tsx  progress.tsx
pages/publications/: index.tsx  publication.tsx
ssg/: Cargo.toml
ssg/src/: lib.rs  main.rs
ssg/src/render/: mod.rs
static/: style.css
styles/: globals.css
utils/: cms.ts  github.ts
